@@ -8,6 +8,7 @@ New since PostGIS 2.5.0beta1
     (Vinícius A.B. Schmidt, Darafei Praliaskouski)
   - #4109, Fix WKT parser accepting and interpreting numbers numbers with
     multiple dots (Raúl Marín, Paul Ramsey)
+  - #4140, Use user-provided CFLAGS in the topology module (Raúl Marín)
 
   See PostGIS 2.5.0 section for full details
 
